! Bugfix, API: new AppletWindowProvider, WindowProvider tells now whether the window is visible or not. Allows to use "imaginary" windows that do not exist.
- Bugfix: SecureScreenDockStation: did not use SecureScreenDockWindowFactory if not explicitly adviced to do so
! API: CWorkingArea extends now CGridArea, these two classes have now almost the same behavior. CGridArea is now also a CDockable.
! API: CControlFactory does no longer create CWorkingAreas but has an additional method to create SplitDockStations which implement CommonDockable.
! API: CommonDockable no longer has the method getClose but getSources. This allows to continue using the old mechanism but break some coupling.
- Bugfix: DockFrontend.updateLocation could throw an exception if a dockable in the tree was also registered as root station.
- Bugfix: When a minimized CDockable was made invisible and then visible again, its extension-mode-buttons were not correctly set.
- API: new LocaleListener, to be added to a DockUI, will be informed when the Locale changes.
! API, Bugfix: PropertyKey requires now a PropertyFactory instead of an Object as default value, this is to prevent memory leaks. No object that can have observers must be global.
- API, Bugfix: DockController.freezeLayout, meltLayout, isLayoutFrozen to temporarily freeze the layout such that clients can safely update the tree of DockStations and Dockables.

[v1.0.8]
- Bugfix: EclipseStackDockComponent contained an unnecessary and not correctly updated list of dockables causing an IndexOutOfBoundsException on JREs of version <= 1.5.0_12
! API: DockableDisplayers can be observed by a DockableDisplayerListener, all DockStations can replace DockableDisplayers any time.
! API: EclipseThemeConnector can be observed by a EclipseThemeConnectorListener
- Layout: New CommonEclipseThemeConnector ensures that CDockable with no title do not have a tab if not necessary in the EclipseTheme